--- a/index.html
+++ b/index.html
@@ -80,23 +80,23 @@
             color: white; /* Set text color to white for better visibility on a black background */
         }
       .author-block {
-            color: #82CAFF; /* Set the link color within the author block to white */
+            color: #5CB3FF; /* Set the link color within the author block to white */
         }
       .hero-body {
-            color: #82CAFF; /* Set the link color within the author block to white */
+            color: #5CB3FF; /* Set the link color within the author block to white */
         }
       .footer {
             background-color: black !important;
             color: #9F8C76 !important;
         }
       .publication-title {
-          color: #5CB3FF !important; /* Set text color to white for better visibility on a black background #FFAE42 */ 
+          color: #FED8B1 !important; /* Set text color to white for better visibility on a black background #FFAE42 */ 
       }
       .subtitle {
-          color: #5CB3FF !important; /* Set text color to white for better visibility on a black background */
+          color: #FED8B1 !important; /* Set text color to white for better visibility on a black background */
       }
       .section h2 {
-            color: #5CB3FF !important; /* Set the title color to blue */
+            color: #FED8B1 !important; /* Set the title color to orange */
         }
       .section h3 {
             color: #FED8B1 !important; /* Set the title color to white */
