--- a/index.html
+++ b/index.html
@@ -109,21 +109,21 @@
   <div class="hero-body">
     <div class="container is-max-desktop">
       <div class="columns is-centered">
-        <div class="column has-text-centered">
+        <div class="column has-text-centered"> 
           <h1 class="title is-1 publication-title">Synthezing Moving People with 3D Control</h1>
           <div class="is-size-5 publication-authors">
-            <span class="author-block" style="color: #82CAFF;">
-              <a href="https://sites.google.com/site/boyilics/home">Boyi Li</a>,</span>
-            <span class="author-block" style="color: #82CAFF;">
-              <a href="https://people.eecs.berkeley.edu/~jathushan/">Jathushan Rajasegaran</a>,</span>
-            <span class="author-block" style="color: #82CAFF;">
-              <a href="https://yossigandelsman.github.io/">Yossi Gandelsman</a>,
+            <span class="author-block">
+              <a href="https://sites.google.com/site/boyilics/home" style="color: #5CB3FF;">Boyi Li</a>,</span>
+            <span class="author-block">
+              <a href="https://people.eecs.berkeley.edu/~jathushan/" style="color: #5CB3FF;">Jathushan Rajasegaran</a>,</span>
+            <span class="author-block">
+              <a href="https://yossigandelsman.github.io/" style="color: #5CB3FF;">Yossi Gandelsman</a>,
             </span>
-            <span class="author-block" style="color: #82CAFF;">
-              <a href="https://people.eecs.berkeley.edu/~efros/">Alexei A. Efros</a>,
+            <span class="author-block">
+              <a href="https://people.eecs.berkeley.edu/~efros/" style="color: #5CB3FF;">Alexei A. Efros</a>,
             </span>
-            <span class="author-block" style="color: #82CAFF;">
-              <a href="https://people.eecs.berkeley.edu/~malik/">Jitendra Malik</a>
+            <span class="author-block">
+              <a href="https://people.eecs.berkeley.edu/~malik/" style="color: #5CB3FF;">Jitendra Malik</a>
             </span>
           </div>
 
