--- a/index.html
+++ b/index.html
@@ -611,7 +611,7 @@
                  autoplay muted loop preload
                  playsinline
                  height="100%" autoplay>
-            <source src="./static/videos/test12_ballet0_whPsZS.mp4"
+            <source src="./static/videos/ballet.mp4"
                     type="video/mp4">
           </video>
         </div>
