--- a/index.html
+++ b/index.html
@@ -79,6 +79,10 @@
             background-color: black !important;
             color: white; /* Set text color to white for better visibility on a black background */
         }
+      .code {
+            background-color: black !important;
+            color: white; /* Set text color to white for better visibility on a black background */
+        }
       .author-block {
             color: #5CB3FF; /* Set the link color within the author block to white */
         }
@@ -738,8 +742,20 @@
   </div>
 </section>
 
-<!-- <pre><code></code></pre> -->
 <section class="section" id="BibTeX">
+  <div class="container is-max-desktop content">
+    <h2 class="title">BibTeX</h2>
+    <div class="citation-block">
+    <pre><code> @article{li20243dhm,
+                author    = {Li, Boyi and Rajasegaran, Jathushan and Gandelsman, Yossi and Efros, Alexei A. and Malik, Jitendra},
+                title     = {Synthesizing Moving People with 3D Control},
+                journal   = {Arxiv},
+                year      = {2024},
+            }
+    </code></pre>
+  </div>
+</section>
+<!-- <section class="section" id="BibTeX">
   <div class="container is-max-desktop content">
     <h2 class="title">BibTeX</h2>
     <div class="citation-block">
@@ -750,7 +766,7 @@
                 year      = {2024},<br>
             }
   </div>
-</section>
+</section> -->
 
 
 
