--- a/index.html
+++ b/index.html
@@ -746,13 +746,18 @@
   <div class="container is-max-desktop content">
     <h2 class="title">BibTeX</h2>
     <div class="citation-block">
+    <style>
+      pre code {
+        color: white;
+        background-color: black;
+      }
+    </style>
     <pre><code> @article{li20243dhm,
-                author    = {Li, Boyi and Rajasegaran, Jathushan and Gandelsman, Yossi and Efros, Alexei A. and Malik, Jitendra},
-                title     = {Synthesizing Moving People with 3D Control},
-                journal   = {Arxiv},
-                year      = {2024},
-            }
-    </code></pre>
+      author    = {Li, Boyi and Rajasegaran, Jathushan and Gandelsman, Yossi and Efros, Alexei A. and Malik, Jitendra},
+      title     = {Synthesizing Moving People with 3D Control},
+      journal   = {Arxiv},
+      year      = {2024},
+      }</code></pre>
   </div>
 </section>
 <!-- <section class="section" id="BibTeX">
