--- a/index.html
+++ b/index.html
@@ -745,13 +745,13 @@
 <section class="section" id="BibTeX">
   <div class="container is-max-desktop content">
     <h2 class="title">BibTeX</h2>
-    <div class="citation-block">
     <style>
-      pre code {
+      citation-block {
         color: white;
         background-color: black;
       }
     </style>
+    <div class="citation-block">
     <pre><code> @article{li20243dhm,
       author    = {Li, Boyi and Rajasegaran, Jathushan and Gandelsman, Yossi and Efros, Alexei A. and Malik, Jitendra},
       title     = {Synthesizing Moving People with 3D Control},
