--- a/index.html
+++ b/index.html
@@ -743,14 +743,14 @@
 </section>
 
 <section class="section" id="BibTeX">
+  <style>
+    .container.is-max-desktop.content {
+      background-color: black;
+      color: white;
+    }
+  </style>
   <div class="container is-max-desktop content">
     <h2 class="title">BibTeX</h2>
-    <style>
-      citation-block {
-        color: white;
-        background-color: black;
-      }
-    </style>
     <div class="citation-block">
     <pre><code> @article{li20243dhm,
       author    = {Li, Boyi and Rajasegaran, Jathushan and Gandelsman, Yossi and Efros, Alexei A. and Malik, Jitendra},
