--- a/index.html
+++ b/index.html
@@ -745,8 +745,8 @@
 <section class="section" id="BibTeX">
   <style>
     .container.is-max-desktop.content {
-      background-color: black;
-      color: white;
+      background-color: black !important;
+      color: white !important;
     }
   </style>
   <div class="container is-max-desktop content">
