--- a/index.html
+++ b/index.html
@@ -116,6 +116,11 @@
         <div class="column has-text-centered"> 
           <h1 class="title is-1 publication-title">Synthezing Moving People with 3D Control</h1>
           <div class="is-size-5 publication-authors">
+            <style>
+              a {
+                color: #5CB3FF;
+              }
+            </style>
             <span class="author-block">
               <a href="https://sites.google.com/site/boyilics/home" style="color: #5CB3FF;">Boyi Li</a>,</span>
             <span class="author-block">
