--- a/index.html
+++ b/index.html
@@ -84,10 +84,10 @@
             color: white; /* Set text color to white for better visibility on a black background */
         }
       .author-block {
-            color: #6698FF; /* Set the link color within the author block to white */
+            color: #56A5EC; /* Set the link color within the author block to white */
         }
       .hero-body {
-            color: #6698FF; /* Set the link color within the author block to white */
+            color: #56A5EC; /* Set the link color within the author block to white */
         }
       .footer {
             background-color: black !important;
