--- a/index.html
+++ b/index.html
@@ -340,7 +340,16 @@
                  autoplay muted loop preload
                  playsinline
                  height="100%" autoplay>
-            <source src="./static/videos/v1.mp4"
+            <source src="./static/videos/test1_27_azimuth.mp4"
+                    type="video/mp4">
+          </video>
+        </div>
+        <div class="content has-text-centered">
+          <video id="replay-video"
+                 autoplay muted loop preload
+                 playsinline
+                 height="100%" autoplay>
+            <source src="./static/videos/test13_27_azimuth.mp4"
                     type="video/mp4">
           </video>
         </div>
