--- a/index.html
+++ b/index.html
@@ -360,7 +360,10 @@
 <!--         <h3 class="title is-4">Re-rendering the input video</h3> -->
         <div class="content has-text-justified">
           <p>
-            Using 3D, you can synthesize moving humans from different camera azimuths.
+            Using 3D, you can synthesize moving humans from varied camera azimuths.
+          </p>
+          <p style="color: #82CAFF;">
+            From left to right: Actor, Input Photo, Imitator (from the original camera azimuth), Imitator (from varied camera azimuths).
           </p>
         </div>
         <div class="content has-text-centered">
@@ -423,11 +426,11 @@
         <!-- Re-rendering. -->
 <!--         <h3 class="title is-4">Prompt: A person turns to his right and paces back and forth. </h3> -->
         <div class="content has-text-justified">
+          <p>
+            With 3D Control, you can synthesize moving people from text input.
+          </p>
           <p style="color: #82CAFF;">
             Text Input: A person turns to his right and paces back and forth.
-          </p>
-          <p>
-            Using 3D, you can synthesize moving humans from text input.
           </p>
         </div>
         <div class="content has-text-centered">
