--- a/index.html
+++ b/index.html
@@ -204,6 +204,13 @@
 <section class="hero teaser">
   <div class="container is-max-desktop">
     <div class="hero-body">
+      <div class="content has-text-justified">
+        <p style="color: #82CAFF;">
+          Actor (Target 3D Poses)&nbsp&nbsp Input Photo &nbsp&nbsp Texture Mapped &nbsp&nbsp Imitator (Output) &nbsp&nbsp
+        </p>
+      </div>
+      <div class="content has-text-centered">
+          
       <video id="teaser" autoplay muted loop playsinline height="100%">
         <source src="./static/videos/v1.mp4"
                 type="video/mp4">
