--- a/index.html
+++ b/index.html
@@ -205,8 +205,8 @@
   <div class="container is-max-desktop">
     <div class="hero-body">
       <div class="content has-text-justified">
-        <p style="color: #82CAFF;">
-          Actor (Target 3D Poses)&nbsp&nbsp Input Photo &nbsp&nbsp Texture Mapped &nbsp&nbsp Imitator (Output) &nbsp&nbsp
+        <p style="color: #56A5EC;">
+          &nbsp&nbspActor (Target 3D Poses)&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp Input Photo &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp Texture Mapped &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp Imitator (Output) &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
         </p>
       </div>
       <div class="content has-text-centered">
