--- a/index.html
+++ b/index.html
@@ -208,8 +208,8 @@
         <p style="color: #56A5EC;">
           &nbsp&nbspActor (Target 3D Poses)&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp Input Photo &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp Texture Mapped &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp Imitator (Output) &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
         </p>
-      </div>
-      <div class="content has-text-centered">
+<!--       </div>
+      <div class="content has-text-centered"> -->
           
       <video id="teaser" autoplay muted loop playsinline height="100%">
         <source src="./static/videos/v1.mp4"
