--- a/index.html
+++ b/index.html
@@ -206,18 +206,22 @@
     <div class="hero-body">
       <div class="content has-text-justified">
         <p style="color: #56A5EC;">
-          &nbsp&nbspActor (Target 3D Poses)&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp Input Photo &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp Texture Mapped &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp Imitator (Output) &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
+          &nbsp&nbsp&nbsp&nbsp&nbsp&nbspActor 
+          (Target 3D Poses)&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
+          Input Photo &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
+          Texture Mapped &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
+          Imitator (Output) &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
         </p>
-<!--       </div>
-      <div class="content has-text-centered"> -->
+      </div>
+      <div class="content has-text-centered">
           
       <video id="teaser" autoplay muted loop playsinline height="100%">
         <source src="./static/videos/v1.mp4"
                 type="video/mp4">
       </video>
-      <h2 class="subtitle has-text-centered">
+      <h3 class="subtitle has-text-centered">
         <span class="dnerf">We propose 3DHM, a two-stage framework that reconstructs 3D Human Motions by completing a texture map from a single image and then rendering the 3D humans to imitate the actions of the actor.
-      </h2>
+      </h3>
     </div>
   </div>
 </section>
