--- a/index.html
+++ b/index.html
@@ -373,7 +373,7 @@
           <p>
             Using 3D, you can synthesize moving humans from varied camera azimuths.
           </p>
-          <p style="color: #82CAFF;">
+          <p style="color: #56A5EC;">
             From left to right: Actor, Input Photo, Imitator (from the original camera azimuth), Imitator (from varied camera azimuths).
           </p>
         </div>
