--- a/index.html
+++ b/index.html
@@ -426,7 +426,7 @@
     <!-- Motion from Text -->
     <div class="columns is-centered">
       <div class="column is-full-width">
-        <h2 class="title is-3">Human Motion from Text</h2>
+        <h2 class="title is-3">3DHM Enables Human Motion from Text</h2>
 
         <!-- Re-rendering. -->
 <!--         <h3 class="title is-4">Prompt: A person turns to his right and paces back and forth. </h3> -->
@@ -458,7 +458,7 @@
     <!-- various viewpoints -->
     <div class="columns is-centered">
       <div class="column is-full-width">
-        <h2 class="title is-3">360 degree Camera Viewpoints</h2>
+        <h2 class="title is-3">3DHM Enables 360 degree Camera Viewpoints</h2>
 
         <!-- Re-rendering. -->
 <!--         <h3 class="title is-4">Re-rendering the input video</h3> -->
@@ -481,6 +481,34 @@
       </div>
     </div>
     <!--/ various view points. -->
+
+    <!-- Animation. -->
+    <div class="columns is-centered">
+      <div class="column is-full-width">
+        <h2 class="title is-3">3DHM Enables Challenging Motions.</h2>
+
+        <!-- Re-rendering. -->
+<!--         <h3 class="title is-4">Re-rendering the input video</h3> -->
+        <div class="content has-text-justified">
+          <p>
+            With 3D control, you can synthesize moving with challenging motions. Please check how the body moves, with special attention to the legs.
+          </p>
+        </div>
+        <div class="content has-text-centered">
+          <video id="replay-video"
+                 autoplay muted loop preload
+                 playsinline
+                 height="100%" autoplay>
+            <source src="./static/videos/v3.mp4"
+                    type="video/mp4">
+          </video>
+        </div>
+        <!--/ Re-rendering. -->
+
+      </div>
+    </div>
+    <!--/ Animation. -->
+
     
     <!-- Animation. -->
     <div class="columns is-centered">
@@ -500,33 +528,6 @@
                  playsinline
                  height="100%" autoplay>
             <source src="./static/videos/v2.mp4"
-                    type="video/mp4">
-          </video>
-        </div>
-        <!--/ Re-rendering. -->
-
-      </div>
-    </div>
-    <!--/ Animation. -->
-
-    <!-- Animation. -->
-    <div class="columns is-centered">
-      <div class="column is-full-width">
-<!--         <h2 class="title is-3">Animation</h2> -->
-
-        <!-- Re-rendering. -->
-<!--         <h3 class="title is-4">Re-rendering the input video</h3> -->
-        <div class="content has-text-justified">
-<!--           <p>
-            Make the man dance like the performer.
-          </p> -->
-        </div>
-        <div class="content has-text-centered">
-          <video id="replay-video"
-                 autoplay muted loop preload
-                 playsinline
-                 height="100%" autoplay>
-            <source src="./static/videos/v3.mp4"
                     type="video/mp4">
           </video>
         </div>
