--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
             color: #56A5EC; /* Set the link color within the author block to white */
         }
       .hero-body {
-            color: #56A5EC; /* Set the link color within the author block to white */
+            color: white; /* Set the link color within the author block to white */
         }
       .footer {
             background-color: black !important;
