--- a/index.html
+++ b/index.html
@@ -365,7 +365,7 @@
 <!--         <h3 class="title is-4">Re-rendering the input video</h3> -->
         <div class="content has-text-justified">
           <p>
-            Using 3D, you can synthesize moving humans from varied camera azimuths.
+            With 3D Control, you can synthesize moving humans from varied camera azimuths.
           </p>
           <p style="color: #56A5EC;">
             From left to right: Actor, Input Photo, Imitator (from the original camera azimuth), Imitator (from varied camera azimuths).
