--- a/index.html
+++ b/index.html
@@ -367,7 +367,7 @@
           <p>
             With 3D Control, you can synthesize moving humans from varied camera azimuths.
           </p>
-          <p style="color: #56A5EC;">
+          <p style="color: #82CAFF;">
             From left to right: Actor, Input Photo, Imitator (from the original camera azimuth), Imitator (from varied camera azimuths).
           </p>
         </div>
