--- a/index.html
+++ b/index.html
@@ -491,7 +491,7 @@
 <!--         <h3 class="title is-4">Re-rendering the input video</h3> -->
         <div class="content has-text-justified">
           <p>
-            With 3D control, you can synthesize moving with challenging motions. Please check how the body moves, with special attention to the legs.
+            With 3D control, you can synthesize moving with challenging motions. <br> Please check how the body moves, with special attention to the legs.
           </p>
         </div>
         <div class="content has-text-centered">
