--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
             color: #56A5EC; /* Set the link color within the author block to white */
         }
       .hero-body {
-            color: white; /* Set the link color within the author block to white */
+            color: #82CAFF; /* Set the link color within the author block to white */
         }
       .footer {
             background-color: black !important;
@@ -116,11 +116,6 @@
         <div class="column has-text-centered"> 
           <h1 class="title is-1 publication-title">Synthezing Moving People with 3D Control</h1>
           <div class="is-size-5 publication-authors">
-            <style>
-              a {
-                color: #5CB3FF;
-              }
-            </style>
             <span class="author-block">
               <a href="https://sites.google.com/site/boyilics/home" style="color: #5CB3FF;">Boyi Li</a>,</span>
             <span class="author-block">
@@ -204,11 +199,12 @@
 <section class="hero teaser">
   <div class="container is-max-desktop">
     <div class="hero-body">
-          &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbspActor 
+<!--           &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbspActor 
           (Target 3D Poses)&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
           Input Photo &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
           Texture Mapped &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
-          Imitator (Output)&nbsp&nbsp 
+          Imitator (Output)&nbsp&nbsp  -->
+      From left to right: Actor, Input Photo, Imitator (from the original camera azimuth), Imitator (from varied camera azimuths).
       <video id="teaser" autoplay muted loop playsinline height="100%">
         <source src="./static/videos/v1.mp4"
                 type="video/mp4">
