--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
           <h1 class="title is-1 publication-title">Synthezing Moving People with 3D Control</h1>
           <div class="is-size-5 publication-authors">
             <span class="author-block">
-              <a href="https://sites.google.com/site/boyilics/home" style="color: #5CB3FF;">Boyi Li</a>,</span>
+              <a href="https://sites.google.com/site/boyilics/home" style="color: #5CB3FF !important;">Boyi Li</a>,</span>
             <span class="author-block">
               <a href="https://people.eecs.berkeley.edu/~jathushan/" style="color: #5CB3FF;">Jathushan Rajasegaran</a>,</span>
             <span class="author-block">
