--- a/index.html
+++ b/index.html
@@ -84,10 +84,10 @@
             color: white; /* Set text color to white for better visibility on a black background */
         }
       .author-block {
-            color: #56A5EC; /* Set the link color within the author block to white */
+            color: #5CB3FF; /* Set the link color within the author block to white */
         }
       .hero-body {
-            color: #82CAFF; /* Set the link color within the author block to white */
+            color: #5CB3FF; /* Set the link color within the author block to white */
         }
       .footer {
             background-color: black !important;
@@ -117,17 +117,17 @@
           <h1 class="title is-1 publication-title">Synthezing Moving People with 3D Control</h1>
           <div class="is-size-5 publication-authors">
             <span class="author-block">
-              <a href="https://sites.google.com/site/boyilics/home" style="color: white !important;">Boyi Li</a>,</span>
+              <a href="https://sites.google.com/site/boyilics/home" style="color: #5CB3FF !important;">Boyi Li</a>,</span>
             <span class="author-block">
-              <a href="https://people.eecs.berkeley.edu/~jathushan/" style="color: #5CB3FF;">Jathushan Rajasegaran</a>,</span>
+              <a href="https://people.eecs.berkeley.edu/~jathushan/" style="color: #5CB3FF !important;">Jathushan Rajasegaran</a>,</span>
             <span class="author-block">
-              <a href="https://yossigandelsman.github.io/" style="color: #5CB3FF;">Yossi Gandelsman</a>,
+              <a href="https://yossigandelsman.github.io/" style="color: #5CB3FF !important;">Yossi Gandelsman</a>,
             </span>
             <span class="author-block">
-              <a href="https://people.eecs.berkeley.edu/~efros/" style="color: #5CB3FF;">Alexei A. Efros</a>,
+              <a href="https://people.eecs.berkeley.edu/~efros/" style="color: #5CB3FF !important;">Alexei A. Efros</a>,
             </span>
             <span class="author-block">
-              <a href="https://people.eecs.berkeley.edu/~malik/" style="color: #5CB3FF;">Jitendra Malik</a>
+              <a href="https://people.eecs.berkeley.edu/~malik/" style="color: #5CB3FF !important;">Jitendra Malik</a>
             </span>
           </div>
 
@@ -204,7 +204,7 @@
           Input Photo &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
           Texture Mapped &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
           Imitator (Output)&nbsp&nbsp  -->
-      From left to right: Actor, Input Photo, Imitator (from the original camera azimuth), Imitator (from varied camera azimuths).
+      From left to right: Actor(Target 3D Poses), Input Photo, Texture Mapped, and Imitator (Output).
       <video id="teaser" autoplay muted loop playsinline height="100%">
         <source src="./static/videos/v1.mp4"
                 type="video/mp4">
@@ -364,7 +364,7 @@
             With 3D Control, you can synthesize moving humans from varied camera azimuths.
           </p>
           <p style="color: #82CAFF;">
-            From left to right: Actor, Input Photo, Imitator (from the original camera azimuth), Imitator (from varied camera azimuths).
+            From left to right: Actor, Input Photo, Imitator (from the original camera azimuth), and Imitator (from varied camera azimuths).
           </p>
         </div>
         <div class="content has-text-centered">
