--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
         </div>
         <div class="item item-fullbody">
           <video poster="" id="fullbody" autoplay muted loop playsinline height="100%">
-            <source src="./static/videos/fullbody.mp4"
+            <source src="./static/videos/test2_21.mp4"
                     type="video/mp4">
           </video>
         </div>
@@ -578,7 +578,7 @@
                  autoplay muted loop preload
                  playsinline
                  height="100%" autoplay>
-            <source src="./static/videos/test2_21.mp4"
+            <source src="./static/videos/test22_21.mp4"
                     type="video/mp4">
           </video>
         </div>
