--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
             color: #5CB3FF; /* Set the link color within the author block to white */
         }
       .hero-body {
-            color: #5CB3FF; /* Set the link color within the author block to white */
+            color: #82CAFF; /* Set the link color within the author block to white */
         }
       .footer {
             background-color: black !important;
