--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
           </video>
         </div>
         <div class="item item-toby">
-          <video poster="" id="toby" autoplay controls muted loop playsinline height="100%">
+          <video poster="" id="toby" autoplay muted loop playsinline height="100%">
             <source src="./static/videos/test10_23.mp4"
                     type="video/mp4">
           </video>
