--- a/index.html
+++ b/index.html
@@ -324,7 +324,40 @@
   <div class="container is-max-desktop">
 
 <!--     <div class="columns is-centered"> -->
+    <!-- training features -->
+    <div class="columns is-centered">
+      <div class="column is-full-width">
+        <h2 class="title is-3">3DHM Training Features</h2>
+        <div class="content has-text-justified">
+          <p>
+            💡 3DHM training pipeline (for both stages) is self-supervised. <br>
+            💡 3DHM does not use any additional annotations. It is trained with pseudo-ground-truth as we use cutting-edge software which can detect, segment, track, and 3Dfy humans (H4D). <br> 
+            💡 3DHM is scalable and its scaling can be done readily in the future given additional videos of humans in motion and computing resources. 
+          </p>
+        </div>
+      </div>
+    </div>
+    <!--/ training features -->
 
+    <!-- training features -->
+    <div class="columns is-centered">
+      <div class="column is-full-width">
+        <h2 class="title is-3">3DHM Key Features</h2>
+        <div class="content has-text-justified">
+          <p>
+            💡 Various Camera Viewpoints. <br>
+            💡 Motions from Text. <br> 
+            💡 Motions from Random Videos (Various 3D poses). <br>
+            💡 Various Camera Azimuths. <br>
+            💡 Long-range Motions. <br>
+            💡 Challenging Motions. <br>
+          </p>
+        </div>
+      </div>
+    </div>
+    <!--/ training features -->
+
+    
     <!-- long-range -->
     <div class="columns is-centered">
       <div class="column is-full-width">
