--- a/index.html
+++ b/index.html
@@ -347,6 +347,7 @@
             💡 Various Camera Azimuths. <br>
             💡 Long-range Motions. <br>
             💡 Challenging Motions. <br>
+            💡 Animations from just the Back View. <br>
           </p>
         </div>
       </div>
