--- a/index.html
+++ b/index.html
@@ -326,9 +326,9 @@
           <p>
             💡 3DHM training pipeline (for both stages) is self-supervised. <br>
             💡 3DHM does not use any additional annotations. It is trained with pseudo-ground-truth as we use cutting-edge software <br> 
-            &nbsp&nbsp&nbsp which can detect, segment, track, and 3Dfy humans (H4D). <br>
+            &nbsp&nbsp&nbsp&nbsp&nbsp which can detect, segment, track, and 3Dfy humans (H4D). <br>
             💡 3DHM is scalable and its scaling can be done readily in the future given additional videos of humans in motion and <br> 
-            &nbsp&nbsp&nbsp computing resources. 
+            &nbsp&nbsp&nbsp&nbsp&nbsp computing resources. 
           </p>
         </div>
       </div>
