--- a/index.html
+++ b/index.html
@@ -133,8 +133,6 @@
 
           <div class="is-size-5 publication-authors">
             <span class="author-block">UC Berkeley</span>
-<!--             <span class="author-block"><sup>1</sup>University of Washington,</span>
-            <span class="author-block"><sup>2</sup>Google Research</span> -->
           </div>
 
           <div class="column has-text-centered">
@@ -160,7 +158,7 @@
               </span>
               <!-- Video Link. -->
               <span class="link-block">
-                <a href="https://www.youtube.com/@boyili3727"
+                <a href="https://youtu.be/iGGlFQJ-OyQ"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="fab fa-youtube"></i>
@@ -178,15 +176,6 @@
                   <span>Code</span>
                   </a>
               </span>
-              <!-- Dataset Link. -->
-<!--               <span class="link-block">
-                <a href="https://github.com/google/nerfies/releases/tag/0.1"
-                   class="external-link button is-normal is-rounded is-dark">
-                  <span class="icon">
-                      <i class="far fa-images"></i>
-                  </span>
-                  <span>Data</span>
-                  </a> -->
             </div>
 
           </div>
@@ -217,7 +206,6 @@
 </section>
 
 <!-- autoplay controls muted loop playsinline -->
-<!-- test4_27.mp4 test12_11.mp4 test16_21.mp4 -->
 <section class="hero is-light is-small">
   <div class="hero-body">
     <div class="container">
@@ -304,7 +292,7 @@
       <div class="column is-four-fifths">
         <h2 class="title is-3">Video</h2>
         <div class="publication-video">
-          <iframe src="https://www.youtube.com/@boyili3727"
+          <iframe src="https://www.youtube.com/embed/iGGlFQJ-OyQ"
                   frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
         </div>
       </div>
