--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
   <meta charset="utf-8">
   <meta name="description"
-        content="Synthezing Moving People with 3D Control">
+        content="Synthesizing Moving People with 3D Control">
   <meta name="keywords" content="Diffusion Models, 3D">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Synthezing Moving People with 3D Control</title>
+  <title> Moving People with 3D Control</title>
   <style>
         body {
             background-color: black !important;
