--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
           Imitator (Output)&nbsp&nbsp  -->
       From left to right: Actor(Target 3D Poses), Input Photo, Texture Mapped, and Imitator (Output).
       <video id="teaser" autoplay muted loop playsinline height="100%">
-        <source src="./static/videos/v1.mp4"
+        <source src="./static/videos/v1.mov"
                 type="video/mp4">
       </video>
       <h2 class="subtitle has-text-centered">
