--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         content="Synthesizing Moving People with 3D Control">
   <meta name="keywords" content="Diffusion Models, 3D">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title> Moving People with 3D Control</title>
+  <title> Synthesizing Moving People with 3D Control</title>
   <style>
         body {
             background-color: black !important;
@@ -48,7 +48,8 @@
   <link rel="stylesheet"
         href="https://cdn.jsdelivr.net/gh/jpswalsh/academicons@1/css/academicons.min.css">
   <link rel="stylesheet" href="./static/css/index.css">
-  <link rel="icon" href="./static/images/favicon.svg">
+<!--   <link rel="icon" href="./static/images/favicon.svg"> -->
+  <link rel="icon" href="./static/images/3dhm.png">
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script defer src="./static/js/fontawesome.all.min.js"></script>
