--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         href="https://cdn.jsdelivr.net/gh/jpswalsh/academicons@1/css/academicons.min.css">
   <link rel="stylesheet" href="./static/css/index.css">
 <!--   <link rel="icon" href="./static/images/favicon.svg"> -->
-  <link rel="icon" href="./static/images/3dhm.png">
+  <link rel="icon" href="./static/images/icon1.png">
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script defer src="./static/js/fontawesome.all.min.js"></script>
