--- a/index.html
+++ b/index.html
@@ -502,7 +502,7 @@
       <div class="column is-full-width">
         <h2 class="title is-3">3DHM Enables Challenging Motions.</h2>
 
-        <!-- Re-rendering. -->
+        <!-- Re-rendering. v3.mp4 -->
 <!--         <h3 class="title is-4">Re-rendering the input video</h3> -->
         <div class="content has-text-justified">
           <p>
@@ -514,7 +514,7 @@
                  autoplay muted loop preload
                  playsinline
                  height="100%" autoplay>
-            <source src="./static/videos/v3.mp4"
+            <source src="./static/videos/test4_22.mp4" 
                     type="video/mp4">
           </video>
         </div>
